<resources>
    <string name="app_name">NewsTube</string>

    <string name="home">홈</string>
    <string name="live">라이브</string>
    <string name="bookmark">북마크</string>
    <string name="search">검색</string>
    <string name="watch">시청</string>
    <string name="filter">필터</string>

    <string name="close">닫기</string>
    <string name="channel">채널</string>
    <string name="reset">초기화</string>
    <string name="sort">정렬</string>
    <string name="recently">최신 순</string>
    <string name="old">오래된 순</string>

    <string name="input_search">검색어를 입력해 주세요.</string>
    <string name="no_result">검색 결과가 없습니다.</string>
    <string name="insert_bookmark">북마크에 저장되었습니다.</string>
    <string name="delete_bookmark">북마크에서 삭제되었습니다.</string>
    <string name="no_bookmark">추가된 북마크가 없습니다.</string>
    <string name="please_select_filter">필터를 선택해주세요</string>
    <string name="select_filter">%d개 필터로 검색</string>
</resources>